--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -16,11 +16,11 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=["res://Main.tscn"]
+open_scenes=["res://Player.tscn", "res://coin.tscn", "res://gui.tscn", "res://Main.tscn"]
 
 [ScriptEditor]
 
-open_scripts=["res://Player.gd"]
+open_scripts=["res://coin.gd", "res://Main.gd", "res://Player.gd"]
 open_help=[]
 script_split_offset=140
 list_split_offset=0
@@ -29,8 +29,8 @@ list_split_offset=0
 
 log_filter_0=true
 log_filter_2=true
-log_filter_1=false
+log_filter_1=true
 log_filter_3=true
-log_filter_4=true
+log_filter_4=false
 collapse=false
 show_search=true
